[package]
name = "typed_test_gen"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Macros to help generate tests from functions with a generic type parameter."
repository = "https://github.com/twiby/test_gen/"
readme = "README.md"
keywords = ["test", "generic", "type", "parameter", "macro"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
